--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #logging.level.org.springframework=ERROR
 
 # Hikari DataSource
-pring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.idle-timeout=10000
@@ -14,18 +14,19 @@ spring.datasource.hikari.connectionTimeout=5000
 spring.datasource.hikari.auto-commit=true
 
 # DataSource Creds
-spring.datasource.url=jbdc:postgresql://localhost:5432/postgres
+spring.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=test
 
 # Hibernate Settings
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jbdc_metadata_defaults=false
 spring.jpa.hibernate.ddl-auto=update
 
 # Server Settings
-#server.servlet.context-path=/contact-api
+server.servlet.context-path=/contact-api
 server.port=8080
 #spring.security.user.name=test
 # Dynamic Spring Security Password Appears In The Console For This Demo
